# GestureRecognition

./: .gitignore  CmakeLists.txt  README.md
Data/: Features key.txt  Good_Leap.arff  createARFF.bat  leap.arff
Data/BatchFiles/: LibSVM.bat  LibSVM_new.bat  REPTree.bat  REPTree_new.bat  RF.bat  RandomForest.bat  RandomForest_new.bat  createARFF.bat
Data/MergeFiles/: createARFF.bat
Data/Testing/: TestGestureTraining.arff
Data/Training/: TestGestureTesting.arff
Data/arffFiles/: A-B-C-D-E-F.arff  A-B-C-D-E.arff  A-B-C-D.arff  A-B-C-E-F.arff  A.arff  (+30 more)
LeapCapture/: CmakeLists.txt  ryanWalterEricMelanie.arff  test.arff
RFlib/: CMakeLists.txt  Readme.txt
RFlib/cmake_modules/: FindOpenCV.cmake
RFlib/doc/: Doxyfile
RFlib/inc/: Color.h  GestureVector.h  Histogram.h  IClassifier.h  IFeatureVector.h  LeafNode.h  Patch.h  RandomizedForest.h  RandomizedTest.h  RandomizedTree.h
RFlib/src/: Color.cpp  GestureVector.cpp  Histogram.cpp  IClassifier.cpp  IFeatureVector.cpp  LeafNode.cpp  Patch.cpp  RandomizedForest.cpp  RandomizedTest.cpp  RandomizedTree.cpp  run_patch.cpp
WinSock/: main.cpp
include/: ARFFWriter.h  BatchWriter.h  Camera.h  Image.h  KinectCamera.h  KinectImage.h  KinectMotion.h  LeapCamera.h  LeapData.h  Point.h  RealTime.h  RealTimeLeapData.h  SampleListener.h  filenames.h  textfile.h
source/: ARFFWriter.cpp  BatchWriter.cpp  Camera.cpp  Image.cpp  KinectCamera.cpp  KinectImage.cpp  KinectMotion.cpp  KinectTest.cpp  LeapCamera.cpp  LeapData.cpp  Point.cpp  RealTime.cpp  RealTimeLeapData.cpp  SampleListener.cpp  filenames.cpp  main.cpp  textfile.cpp
(+16643 files in other folders)
